--- a/eurka-server-master.yml
+++ b/eurka-server-master.yml
@@ -11,7 +11,7 @@ eureka:
     fetch-registry: false
     serviceUrl:
       defaultZone: http://localhost:8752/eureka/
-spring
+spring:
   profiles: master
   application:
     name: eurka-server
