--- a/eurka-server-master.yml
+++ b/eurka-server-master.yml
@@ -1,6 +1,5 @@
 server:
-  port: 8750
-
+  port: 8751
 eureka:
   server:
     renewal-percent-threshold: 0.60
@@ -15,3 +14,18 @@ spring:
   profiles: master
   application:
     name: eurka-server
+  cloud:
+    bus:
+      trace:
+        enabled: true
+      enabled: true
+  rabbitmq:
+    host: 113.207.75.21
+    port: 5672
+    username: crmeeting
+    password: CRmeeting*()
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
