--- a/service-hi-dev.yml
+++ b/service-hi-dev.yml
@@ -1,1 +1,15 @@
-foo: version4
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8751/eureka/
+spring:
+  zipkin:
+    base-url: http://localhost:9411
+    sender:
+      type: WEB
+    locator:
+      discovery:
+        enabled: true
+  sleuth:
+    sampler:
+      percentage: 1.0
