--- a/service-hi-dev.yml
+++ b/service-hi-dev.yml
@@ -3,6 +3,8 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8751/eureka/
 spring:
+  application:
+    name: service-hi
   zipkin:
     base-url: http://localhost:9411
     sender:
