--- a/eurka-server-slave.yml
+++ b/eurka-server-slave.yml
@@ -8,3 +8,7 @@ eureka:
     fetch-registry: false
     serviceUrl:
       defaultZone: http://localhost:8751/eureka/
+spring:
+  profiles: slave
+  application:
+    name: eurka-server
