--- a/eurka-server-master.yml
+++ b/eurka-server-master.yml
@@ -4,8 +4,8 @@ eureka:
   instance:
     hostname: master
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:8752/eureka/
 spring:
