--- a/eurka-server-slave.yml
+++ b/eurka-server-slave.yml
@@ -4,8 +4,8 @@ eureka:
   instance:
     hostname: slave
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:8751/eureka/
 spring:
