--- a/eurka-server-master.yml
+++ b/eurka-server-master.yml
@@ -4,10 +4,10 @@ eureka:
   instance:
     hostname: master
   client:
-    register-with-eureka: true
-    fetch-registry: true
+    register-with-eureka: false
+    fetch-registry: false
     serviceUrl:
-      defaultZone: http://localhost:8752/eureka/
+      defaultZone: http://slave:8752/eureka/
 spring:
   profiles: master
   application:
