--- a/eurka-server-slave.yml
+++ b/eurka-server-slave.yml
@@ -4,10 +4,10 @@ eureka:
   instance:
     hostname: slave
   client:
-    register-with-eureka: true
-    fetch-registry: true
+    register-with-eureka: false
+    fetch-registry: false
     serviceUrl:
-      defaultZone: http://localhost:8751/eureka/
+      defaultZone: http://master:8751/eureka/
 spring:
   profiles: slave
   application:
