--- a/service-hi-dev.yml
+++ b/service-hi-dev.yml
@@ -2,7 +2,7 @@ foo: version2
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8751/eureka/
+      defaultZone: http://localhost:8751/eureka/,http://localhost:8752/eureka/
 spring:
   zipkin:
     base-url: http://localhost:9411
